--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ section{padding:6rem 0;position:relative}
 /* Modern Contact Section Styles */
 .contact-layout {
   display: grid;
-  grid-template-columns: 1fr 1.3fr;
+  grid-template-columns: 400px 1fr;
   gap: 3rem;
   align-items: start;
   max-width: 1200px;
@@ -316,22 +316,28 @@ section{padding:6rem 0;position:relative}
 }
 
 .contact-cards-modern {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
+  height: fit-content;
+  align-self: center;
 }
 
 .contact-card-modern {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  gap: 1rem;
+  text-align: center;
+  gap: 0.75rem;
   background: var(--bg-card);
   border: 1px solid var(--border-color);
   border-radius: var(--radius);
-  padding: 1.25rem;
+  padding: 1.5rem 1rem;
   transition: all var(--transition-base);
   position: relative;
   overflow: hidden;
+  min-height: 140px;
+  justify-content: center;
 }
 
 .contact-card-modern::before {
@@ -358,13 +364,14 @@ section{padding:6rem 0;position:relative}
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 48px;
-  height: 48px;
+  width: 40px;
+  height: 40px;
   background: var(--gradient-primary);
   border-radius: var(--radius);
   color: #fff;
   flex-shrink: 0;
   transition: all var(--transition-base);
+  margin-bottom: 0.25rem;
 }
 
 .contact-card-modern:hover .contact-icon-modern {
@@ -373,26 +380,30 @@ section{padding:6rem 0;position:relative}
 }
 
 .contact-info-modern {
-  flex: 1;
-  min-width: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 0.25rem;
 }
 
 .contact-label-modern {
-  font-size: 0.9rem;
-  font-weight: 600;
+  font-size: 0.85rem;
+  font-weight: 700;
   color: var(--text-secondary);
-  margin-bottom: 0.25rem;
   text-transform: uppercase;
   letter-spacing: 0.5px;
+  margin-bottom: 0.25rem;
 }
 
 .contact-link-modern {
   color: var(--primary-purple);
   text-decoration: none;
   font-weight: 600;
-  font-size: 0.95rem;
+  font-size: 0.9rem;
   transition: all var(--transition-fast);
-  word-break: break-all;
+  word-break: break-word;
+  line-height: 1.3;
 }
 
 .contact-link-modern:hover {
@@ -402,8 +413,8 @@ section{padding:6rem 0;position:relative}
 
 .contact-text-modern {
   color: var(--text-primary);
-  font-weight: 500;
-  font-size: 0.95rem;
+  font-weight: 600;
+  font-size: 0.9rem;
 }
 
 .contact-form-modern {
@@ -421,49 +432,6 @@ section{padding:6rem 0;position:relative}
   -webkit-text-fill-color: transparent;
 }
 
-.fallback-section-modern {
-  margin-top: 1.5rem;
-  padding-top: 1.5rem;
-  border-top: 1px solid var(--border-color);
-  text-align: center;
-}
-
-.fallback-text {
-  font-size: 0.9rem;
-  color: var(--text-muted);
-  margin-bottom: 0.75rem;
-  font-weight: 500;
-}
-
-.fallback-links-modern {
-  display: flex;
-  gap: 0.5rem;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.fallback-link-modern {
-  display: inline-flex;
-  align-items: center;
-  gap: 6px;
-  padding: 8px 12px;
-  background: var(--bg-secondary);
-  color: var(--text-primary);
-  text-decoration: none;
-  border-radius: var(--radius);
-  border: 1px solid var(--border-color);
-  font-size: 0.85rem;
-  font-weight: 600;
-  transition: all var(--transition-fast);
-}
-
-.fallback-link-modern:hover {
-  background: var(--primary-purple);
-  color: #fff;
-  border-color: var(--primary-purple);
-  transform: translateY(-2px);
-}
-
 /* Responsive Design */
 @media (max-width: 1024px) {
   .contact-layout {
@@ -473,7 +441,6 @@ section{padding:6rem 0;position:relative}
   
   .contact-cards-modern {
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
     gap: 1rem;
   }
 }
@@ -481,16 +448,16 @@ section{padding:6rem 0;position:relative}
 @media (max-width: 768px) {
   .contact-cards-modern {
     grid-template-columns: 1fr;
-    grid-template-rows: auto;
   }
   
   .contact-card-modern {
-    padding: 1rem;
+    min-height: 120px;
+    padding: 1.25rem 1rem;
   }
   
   .contact-icon-modern {
-    width: 40px;
-    height: 40px;
+    width: 36px;
+    height: 36px;
   }
 }
 
@@ -500,9 +467,7 @@ section{padding:6rem 0;position:relative}
   }
   
   .contact-card-modern {
-    flex-direction: column;
-    text-align: center;
-    gap: 0.75rem;
+    min-height: 100px;
     padding: 1rem;
   }
   
@@ -510,27 +475,124 @@ section{padding:6rem 0;position:relative}
     text-align: center;
   }
 }
+/* Form Styles */
+.contact-form.card {
+  position: relative;
+}
 
-.contact-form.card{position:relative}
-.form-group{display:flex;flex-direction:column;gap:.45rem;margin-bottom:1.25rem}
-.form-label{font-weight:700;color:var(--text-secondary);font-size:.95rem}
-.input,.textarea{width:100%;padding:14px 16px;border-radius:var(--radius);border:2px solid var(--border-color);background:var(--bg-card);color:var(--text-primary);outline:0;transition:all var(--transition-base);font-family:inherit;font-size:.95rem}
-.input:focus,.textarea:focus{border-color:var(--primary-purple);box-shadow:0 0 0 4px rgba(124,58,237,.15)}
-.textarea{min-height:120px;resize:vertical;line-height:1.6}
-.form-error{font-size:.85rem;color:#ef4444;margin-top:.25rem;display:none;font-weight:600}
-.form-error.visible{display:block}
-.char-counter{font-size:.8rem;color:var(--text-muted);text-align:right;margin-top:-.25rem;font-weight:600}
-.btn-submit{width:100%;padding:16px 20px;border:0;border-radius:var(--radius);background:var(--gradient-primary);color:#fff;font-weight:800;font-size:1rem;cursor:pointer;transition:transform var(--transition-base),box-shadow var(--transition-base)}
-.btn-submit:hover{transform:translateY(-2px);box-shadow:0 12px 30px rgba(124,58,237,.35)}
-.btn-submit:disabled{opacity:.6;cursor:not-allowed;transform:none}
-.btn-loader{display:inline-flex;align-items:center;gap:8px}
-.success-message{position:absolute;inset:0;background:var(--bg-card);padding:2rem;display:none;align-items:center;justify-content:center;border-radius:var(--radius-lg);backdrop-filter:blur(10px);z-index:2}
-.success-message.visible{display:flex}
-.success-content{text-align:center;max-width:320px}
-.success-icon{font-size:2.5rem;margin-bottom:.5rem}
-.fallback-links{display:flex;gap:.75rem;justify-content:center;flex-wrap:wrap;margin-top:1rem}
-.fallback-link{display:inline-flex;align-items:center;gap:6px;padding:8px 14px;background:var(--bg-secondary);color:var(--text-primary);text-decoration:none;border-radius:var(--radius);border:1px solid var(--border-color);font-weight:600}
+.form-group {
+  display: flex;
+  flex-direction: column;
+  gap: .45rem;
+  margin-bottom: 1.25rem;
+}
 
+.form-label {
+  font-weight: 700;
+  color: var(--text-secondary);
+  font-size: .95rem;
+}
+
+.input, .textarea {
+  width: 100%;
+  padding: 14px 16px;
+  border-radius: var(--radius);
+  border: 2px solid var(--border-color);
+  background: var(--bg-card);
+  color: var(--text-primary);
+  outline: 0;
+  transition: all var(--transition-base);
+  font-family: inherit;
+  font-size: .95rem;
+}
+
+.input:focus, .textarea:focus {
+  border-color: var(--primary-purple);
+  box-shadow: 0 0 0 4px rgba(124,58,237,.15);
+}
+
+.textarea {
+  min-height: 120px;
+  resize: vertical;
+  line-height: 1.6;
+}
+
+.form-error {
+  font-size: .85rem;
+  color: #ef4444;
+  margin-top: .25rem;
+  display: none;
+  font-weight: 600;
+}
+
+.form-error.visible {
+  display: block;
+}
+
+.char-counter {
+  font-size: .8rem;
+  color: var(--text-muted);
+  text-align: right;
+  margin-top: -.25rem;
+  font-weight: 600;
+}
+
+.btn-submit {
+  width: 100%;
+  padding: 16px 20px;
+  border: 0;
+  border-radius: var(--radius);
+  background: var(--gradient-primary);
+  color: #fff;
+  font-weight: 800;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: transform var(--transition-base), box-shadow var(--transition-base);
+}
+
+.btn-submit:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 12px 30px rgba(124,58,237,.35);
+}
+
+.btn-submit:disabled {
+  opacity: .6;
+  cursor: not-allowed;
+  transform: none;
+}
+
+.btn-loader {
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.success-message {
+  position: absolute;
+  inset: 0;
+  background: var(--bg-card);
+  padding: 2rem;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  border-radius: var(--radius-lg);
+  backdrop-filter: blur(10px);
+  z-index: 2;
+}
+
+.success-message.visible {
+  display: flex;
+}
+
+.success-content {
+  text-align: center;
+  max-width: 320px;
+}
+
+.success-icon {
+  font-size: 2.5rem;
+  margin-bottom: .5rem;
+}
 /* Utilities */
 .fade-in{opacity:0;transform:translateY(30px);transition:all .8s cubic-bezier(.4,0,.2,1)}
 .fade-in.visible{opacity:1;transform:translateY(0)}
@@ -1259,7 +1321,7 @@ section{padding:6rem 0;position:relative}
 
         <div style="text-align:center;margin-top:2rem">
           <button id="viewAllCertsBtn" class="btn btn-secondary">
-            <span id="certBtnText">View All 9 Certifications</span>
+            <span id="certBtnText">View All Certifications</span>
             <svg id="certBtnIcon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M6 9l6 6 6-6"/></svg>
           </button>
         </div>
