--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ section{padding:6rem 0;position:relative}
 /* Modern Contact Section Styles */
 .contact-layout {
   display: grid;
-  grid-template-columns: 400px 1fr;
+  grid-template-columns: 420px 1fr;
   gap: 3rem;
   align-items: start;
   max-width: 1200px;
@@ -318,7 +318,7 @@ section{padding:6rem 0;position:relative}
 .contact-cards-modern {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
+  gap: 1.5rem;
   height: fit-content;
   align-self: center;
 }
@@ -332,12 +332,13 @@ section{padding:6rem 0;position:relative}
   background: var(--bg-card);
   border: 1px solid var(--border-color);
   border-radius: var(--radius);
-  padding: 1.5rem 1rem;
+  padding: 1.5rem 1.25rem;
   transition: all var(--transition-base);
   position: relative;
   overflow: hidden;
   min-height: 140px;
   justify-content: center;
+  min-width: 180px;
 }
 
 .contact-card-modern::before {
@@ -400,10 +401,14 @@ section{padding:6rem 0;position:relative}
   color: var(--primary-purple);
   text-decoration: none;
   font-weight: 600;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   transition: all var(--transition-fast);
-  word-break: break-word;
-  line-height: 1.3;
+  word-break: keep-all;
+  white-space: nowrap;
+  line-height: 1.2;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .contact-link-modern:hover {
@@ -414,7 +419,8 @@ section{padding:6rem 0;position:relative}
 .contact-text-modern {
   color: var(--text-primary);
   font-weight: 600;
-  font-size: 0.9rem;
+  font-size: 0.85rem;
+  white-space: nowrap;
 }
 
 .contact-form-modern {
@@ -441,25 +447,34 @@ section{padding:6rem 0;position:relative}
   
   .contact-cards-modern {
     grid-template-columns: repeat(2, 1fr);
-    gap: 1rem;
+    gap: 1.25rem;
+    max-width: 500px;
+    margin: 0 auto;
   }
 }
 
 @media (max-width: 768px) {
   .contact-cards-modern {
     grid-template-columns: 1fr;
+    max-width: 320px;
   }
   
   .contact-card-modern {
     min-height: 120px;
     padding: 1.25rem 1rem;
+    min-width: auto;
   }
   
+  .contact-link-modern {
+    font-size: 0.85rem;
+    white-space: normal;
+    word-break: break-word;
+  }
+}
   .contact-icon-modern {
     width: 36px;
     height: 36px;
   }
-}
 
 @media (max-width: 480px) {
   .contact-layout {
