--- a/index.html
+++ b/index.html
@@ -1450,7 +1450,7 @@ section{padding:6rem 0;position:relative}
           </div>
           <div class="contact-info-modern">
             <h3 class="contact-label-modern">GitHub</h3>
-            <a href="github.com/walia-sahil" target="_blank" rel="noopener noreferrer" class="contact-link-modern">github.com/walia-sahil</a>
+            <a href="https://github.com/walia-sahil" target="_blank" rel="noopener noreferrer" class="contact-link-modern">github.com/walia-sahil</a>
           </div>
         </div>
 
