--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
   --nav-bg:rgba(255,255,255,.95);--nav-border:rgba(226,232,240,.6);--nav-height:72px;
   /* Gradients */
   --gradient-card:linear-gradient(135deg,rgba(76,29,149,.03) 0%,rgba(30,64,175,.03) 100%);
-  --gradient-primary:linear-gradient(135deg,#4c1d95 0%,#1e40af 100%);
-  --gradient-secondary:linear-gradient(135deg,#7c3aed 0%,#2563eb 100%);
-  --gradient-text:linear-gradient(135deg,#4c1d95 0%,#1e40af 50%,#6d28d9 100%);
+  --gradient-primary:linear-gradient(135deg,#7036c6 0%,#2550dd 100%);
+  --gradient-secondary:linear-gradient(135deg,#9460ee 0%,#2563eb 100%);
+  --gradient-text:linear-gradient(135deg,#4c1d95 0%,#1e40af 50%,#8746ef 100%);
   /* Shadows */
   --shadow-sm:0 2px 8px rgba(0,0,0,.04);--shadow-md:0 8px 24px rgba(0,0,0,.06);--shadow-lg:0 20px 40px rgba(0,0,0,.08);--shadow-glow:0 0 30px rgba(124,58,237,.3);
   /* Layout & Typography */
