--- a/index.html
+++ b/index.html
@@ -1565,7 +1565,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
           </div>
 
           <div class="cert-card card fade-in cert-hidden">
-            <div class="cert-image"><img src="https://images.unsplash.com/photo-1451187580459-43490279c0fa?w=300&h=200&fit=crop" alt="AWS Proficiency Certificates" loading="lazy" /></div>
+            <div class="cert-image"><img src="./images/certifications/thumbnail%20images/AWS%20Machine%20Learning%20Services.png" alt="AWS Proficiency Certificates" loading="lazy" /></div>
             <div class="cert-content">
               <h3 class="cert-title">AWS Proficiency Certificates</h3>
               <p class="cert-issuer">AWS</p>
