--- a/index.html
+++ b/index.html
@@ -1565,12 +1565,12 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
           </div>
 
           <div class="cert-card card fade-in cert-hidden">
-            <div class="cert-image"><img src="./images/certifications/thumbnail%20images/AWS%20Machine%20Learning%20Services.png" alt="AWS Proficiency Certificates" loading="lazy" /></div>
+            <div class="cert-image"><img src="./images/certifications/thumbnail%20images/AWS%20Machine%20Learning%20Services.png" alt="Amazon Web Services" loading="lazy" /></div>
             <div class="cert-content">
-              <h3 class="cert-title">AWS Proficiency Certificates</h3>
+              <h3 class="cert-title">Amazon Web Services</h3>
               <p class="cert-issuer">AWS</p>
               <p class="cert-date">2022</p>
-              <a href="./documents/certifications/AWS_Proficiency_Certificates-1-6.pdf" target="_blank" rel="noopener noreferrer" class="cert-link-button">View Certificate</a>
+              <a href="./documents/certifications/AWS_Certificates.pdf" target="_blank" rel="noopener noreferrer" class="cert-link-button">View Certificate</a>
             </div>
           </div>
 
